tests/ui/symbol-names/const-generics-demangling.legacy.stderr
error: symbol-name(_ZN1c17Unsigned$LT$_$GT$1f17h[HASH]E)
  --> $DIR/const-generics-demangling.rs:13:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: demangling(c::Unsigned<_>::f::h[HASH])
  --> $DIR/const-generics-demangling.rs:13:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(c::Unsigned<_>::f)
  --> $DIR/const-generics-demangling.rs:13:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1c15Signed$LT$_$GT$1f17h[HASH]E)
  --> $DIR/const-generics-demangling.rs:26:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: demangling(c::Signed<_>::f::h[HASH])
  --> $DIR/const-generics-demangling.rs:26:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(c::Signed<_>::f)
  --> $DIR/const-generics-demangling.rs:26:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1c13Bool$LT$_$GT$1f17h[HASH]E)
  --> $DIR/const-generics-demangling.rs:39:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: demangling(c::Bool<_>::f::h[HASH])
  --> $DIR/const-generics-demangling.rs:39:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(c::Bool<_>::f)
  --> $DIR/const-generics-demangling.rs:39:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1c13Char$LT$_$GT$1f17h[HASH]E)
  --> $DIR/const-generics-demangling.rs:52:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: demangling(c::Char<_>::f::h[HASH])
  --> $DIR/const-generics-demangling.rs:52:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(c::Char<_>::f)
  --> $DIR/const-generics-demangling.rs:52:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 12 previous errors

